# portfolio-sample

./: .editorconfig  .prettierrc.cjs  README.md
.buildkite/: pipeline.yaml  run-default-or-user-pipeline.sh
.buildkite/apps/: default-pipeline.yaml  home-internal-pipeline.yaml  mgn-public-site-pipeline.yaml  rb-public-site-pipeline.yaml
.buildkite/deploy-stages/: pipeline.stage.ci.yaml  pipeline.stage.deliver.yaml  pipeline.stage.release.yaml
linear-airtable-sync/: .editorconfig  .env.example  .flake8  .gcloudignore  .gitignore  .pre-commit-config.yaml  .prettierrc.cjs  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
linear-airtable-sync/ci/: pipeline.dev.cd.yaml  pipeline.prod.cd.yaml
linear-airtable-sync/src/: app.py  helper.py  request_test.json
linear-airtable-sync/src/airtable/: airtable.py  airtable_test.py  config.py  types.py
linear-airtable-sync/src/linear/: config.py  linear.py  linear_test.py  types.py
react-components/: .gitignore
